@@ -1,10 +1,15 @@
 python-apt (0.8.5) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * python/cache.cc:
     - ensure that pkgApplyStatus is called when the cache is opened
       (thanks to Sebastian Heinlein for finding this bug), LP: #659438
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 17 Apr 2012 14:09:24 +0200
+  [ Stéphane Graber ]
+  * data/templates/Ubuntu.info.in:
+    - add quantal
+  
+ -- Michael Vogt <mvo@debian.org>  Tue, 17 Apr 2012 14:09:24 +0200
 
 python-apt (0.8.4) unstable; urgency=low
 
